# LockKnife

./: .gitignore  CHANGELOG.md  Cargo.toml  LockKnife.sh  README.md  SECURITY.md  bandit.yaml  deny.toml  jj  lockknife.conf  lockknife.conf.example  maturin.toml  pyproject.toml  rustfmt.toml
.cargo/: config.toml
.github/: FUNDING.yml
.github/workflows/: pre-release-checks.yml  release.yml
core/: android_version_support.sh  config_manager.sh  device.sh  logging.sh  main.sh  security.sh
docs/: headless-cli-walkthrough.md  legacy-interactive-walkthrough.md  tui-walkthrough.md
lockknife/: __init__.py  __main__.py  lockknife_core.pyi
lockknife-core/: .gitignore  Cargo.toml
lockknife-core/fuzz/: Cargo.toml
lockknife-core/fuzz/fuzz_targets/: correlate.rs  parse_dex_header.rs  sqlite_table.rs
lockknife-core/src/: .gitignore  adb_rust.rs  binary.rs  bruteforce.rs  correlation.rs  crypto.rs  gesture.rs  intel.rs  lib.rs  network.rs  pattern.rs  pcap.rs  sqlite_bulk.rs  wasm.rs  yara_scan.rs
lockknife-core/src/exploit/: handshake.rs  mod.rs  packet.rs  scanner.rs  wps.rs
lockknife-tui/: Cargo.toml
lockknife-tui/src/: bridge.rs  lib.rs
lockknife-tui/src/app/: .gitignore  async_dispatch.rs  catalog.rs  config.rs  followups.rs  input.rs  investigation.rs  layout.rs  mod.rs  playbooks.rs  prompt_helpers.rs  prompts.rs  result_context.rs  results.rs  state.rs  tests.rs
lockknife-tui/src/app/catalog/: action_capabilities.rs  action_descriptions.rs  action_help.rs  action_recovery.rs  ai.rs  analyze.rs  apk.rs  case.rs  core.rs  credentials.rs  crypto.rs  exploitation.rs  extraction.rs  fields.rs  forensics.rs  intelligence.rs  module_metadata.rs  network.rs  plugins.rs  runtime.rs  security.rs
lockknife-tui/src/app/results/: analysis_context.rs  apk_context.rs  case_context.rs  common.rs  diagnostics.rs  enrichment_context.rs  followups.rs  forensics_context.rs  paths.rs  playbook_context.rs  reporting_context.rs  runtime_context.rs  security_context.rs
lockknife-tui/src/app/tests/: action_prompts.rs  catalog.rs  config_history.rs  followups.rs  prompt_memory.rs  result_view.rs  state_and_layout.rs
lockknife-tui/src/event/: helpers.rs  main.rs  mod.rs  overlays.rs  tests.rs
lockknife-tui/src/event/overlays/: action_menu.rs  config.rs  confirm.rs  prompt.rs  result_view.rs
lockknife-tui/src/event/tests/: action_menu.rs  config.rs  main_shortcuts.rs  prompt_submit.rs  result_view.rs
lockknife-tui/src/ui/: exploit.rs  mod.rs  overlays.rs  panels.rs  tests.rs
lockknife-tui/src/ui/overlays/: action_menu.rs  case_panel.rs  common.rs  confirm.rs  dialogs.rs  result_view.rs  status.rs
lockknife-tui/src/ui/tests/: action_details.rs  compact_status.rs  confirm.rs  output_and_titles.rs  prompts.rs  rendering.rs
lockknife/core/: _case_artifacts.py  _case_common.py  _case_jobs.py  _case_models.py  _case_reporting.py  _case_runtime.py  _case_store.py  adb.py  case.py  cleanup.py  cli_instrumentation.py  cli_types.py  config.py  custody.py  device.py  device_selection.py  device_targeting.py  error_report.py  errors.py  exceptions.py  execution_policy.py  feature_matrix.py  health.py  http.py  logging.py  metrics.py  output.py  path_safety.py  plugin.py  plugin_contract.py  plugin_loader.py  plugin_models.py  progress.py  rate_limiter.py  secrets.py  security.py  serialize.py  version.py
lockknife/modules/: _case_enrichment_common.py  _case_enrichment_helpers.py  _case_enrichment_orchestrator.py  _case_enrichment_payloads.py  _case_enrichment_runs.py  _case_enrichment_summary.py  base.py  case_enrichment.py
lockknife/templates/: chain_of_custody.html  executive.html  executive_report.html  technical.html  technical_report.html
lockknife_headless_cli/: _case_cli_core.py  _case_cli_enrichment.py  _case_cli_helpers.py  _case_cli_queries.py  _credential_workflows.py  _extract_all.py  _extract_basic.py  _extract_browser.py  _extract_helpers.py  _extract_messaging.py  _extract_misc.py  _tui_callback_ai.py  _tui_callback_analyze.py  _tui_callback_apk.py  _tui_callback_case.py  _tui_callback_core.py  _tui_callback_credentials.py  _tui_callback_crypto.py  _tui_callback_exploit.py  _tui_callback_extraction.py  _tui_callback_forensics.py  _tui_callback_helpers.py  _tui_callback_intelligence.py  _tui_callback_misc.py  _tui_callback_network.py  _tui_callback_plugins.py  _tui_callback_report.py  _tui_callback_runtime.py  _tui_callback_security.py  ai.py  analyze.py  apk.py  case.py  completion.py  crack.py  crypto_wallet.py  device.py  exploit.py  extract.py  features.py  (+11 more)
lockknife_headless_cli/actions/: __init__.py  registry.py
lockknife_headless_cli/exploit/: __init__.py  adb_tcp.py  bluetooth.py  hotspot.py  usb.py  wifi.py  zeroclick.py
modules/: advanced_apk_analysis.sh  ai_analysis.sh  bootloader_firmware.sh  cloud_backup.sh  crypto_forensics.sh  data_extraction.sh  forensic_analysis.sh  hardware_security.sh  kernel_analysis.sh  malware_analysis.sh  memory_analysis.sh  multi_device.sh  network_analysis.sh  passkey_analysis.sh  password_recovery.sh  private_space.sh  report_generator.sh  runtime_analysis.sh  ssl_pinning_bypass.sh  threat_intelligence.sh
tests/: .gitignore  conftest.py
tests/integration/: test_cli.py  test_device_mock_flow.py  test_full_flow.py
tests/unit/: test_action_registry.py  test_adb.py  test_ai_modules.py  test_aleapp_compat_phase4.py  test_apk_device_pull.py  test_apk_permissions_vuln.py  test_browser_common_phase2.py  test_case_cli_helpers_phase2.py  test_case_enrichment_phase2.py  test_case_management.py  test_case_management_cli.py  test_case_management_integrations.py  test_case_store.py  test_chain_of_custody.py  test_cli_features.py  test_cli_health.py  test_cli_interactive.py  test_cli_more.py  test_cli_package_layout.py  test_cli_smoke.py  test_config.py  test_core_adb_device.py  test_core_cleanup.py  test_core_cli_types.py  test_core_config_and_decompile.py  test_core_health.py  test_core_http.py  test_core_http_helpers.py  test_core_logging.py  test_core_metrics.py  test_core_serialize.py  test_coverage_boosters.py  (+74 more)
(+169 files in other folders)
