[build-system]
requires = ["maturin>=1.9.4"]
build-backend = "maturin"

[project]
name = "lockknife"
version = "1.0.0"
description = "LockKnife: Android security research, forensics, and ethical hacking tool"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-only" }
authors = [{ name = "ImKKingshuk" }]
urls = { Homepage = "https://github.com/ImKKingshuk/LockKnife", Documentation = "https://lockknife.vercel.app" }
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
]
dependencies = [
  "click>=8.1",
  "rich>=13.0",
  "jinja2>=3.1",
  "defusedxml>=0.7",
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "structlog>=23.0",
]

[project.optional-dependencies]
apk = ["androguard>=4.0"]
frida = ["frida-tools>=12.0"]
ml = ["scikit-learn>=1.3", "numpy>=1.24", "joblib>=1.3"]
yara = ["yara-python>=4.3"]
threat-intel = ["vt-py>=0.18", "OTXv2>=1.5"]
network = ["scapy>=2.5"]

# Exploitation framework dependencies (Linux-only, install separately)
# exploitation-core = ["bleak>=0.21.0; sys_platform == 'linux'", "impacket>=0.11.0"]
# exploitation-bluetooth = ["lockknife[exploitation-core]", "pybluez>=0.23; sys_platform == 'linux'"]
# exploitation = ["lockknife[exploitation-core,exploitation-bluetooth]"]
full = ["lockknife[apk,frida,ml,yara,threat-intel,network]"]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "pytest-cov>=5.0",
    "bandit>=1.7",
    "pip-audit>=2.7",
    "mypy>=1.8",
    "maturin>=1.9.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]

[tool.coverage.run]
branch = true
source = ["lockknife", "lockknife_headless_cli"]
omit = [
  "lockknife/__main__.py",
  "lockknife_headless_cli/interactive.py",
]

[tool.coverage.report]
skip_covered = true
show_missing = true
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
no_implicit_optional = true
ignore_missing_imports = true
pretty = true
exclude = "^(lockknife_headless_cli/|lockknife/__main__\\.py$)"

[[tool.mypy.overrides]]
module = [
  "lockknife_headless_cli.main",
  "lockknife_headless_cli.features",
  "lockknife_headless_cli.plugins",
]
disable_error_code = ["untyped-decorator"]

[[tool.mypy.overrides]]
module = [
  "lockknife_headless_cli._extract_all",
  "lockknife_headless_cli._extract_basic",
  "lockknife_headless_cli._extract_browser",
  "lockknife_headless_cli._extract_messaging",
  "lockknife_headless_cli._extract_misc",
  "lockknife_headless_cli._case_cli_core",
  "lockknife_headless_cli._case_cli_enrichment",
  "lockknife_headless_cli._case_cli_queries",
  "lockknife_headless_cli.device",
  "lockknife_headless_cli.network",
  "lockknife_headless_cli.forensics",
  "lockknife_headless_cli.security",
  "lockknife_headless_cli.crack",
  "lockknife_headless_cli.exploit",
]
disable_error_code = ["untyped-decorator"]

[project.scripts]
lockknife = "lockknife_headless_cli.main:cli"

[tool.maturin]
manifest-path = "lockknife-core/Cargo.toml"
module-name = "lockknife.lockknife_core"
python-source = "."
python-packages = ["lockknife", "lockknife_headless_cli"]
include = [
  { path = "lockknife_headless_cli/**/*.py", format = ["sdist", "wheel"] },
]
features = ["extension-module"]
