[build-system]
requires = ["maturin>=1.9.4"]
build-backend = "maturin"

[project]
name = "lockknife"
version = "1.0.0"
description = "LockKnife: Android security research, forensics, and ethical hacking tool"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "GPL-3.0-only" }
authors = [{ name = "ImKKingshuk" }]
urls = { Homepage = "https://github.com/ImKKingshuk/LockKnife", Documentation = "https://lockknife.vercel.app" }
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
]
dependencies = [
  "click>=8.1",
  "rich>=13.0",
  "jinja2>=3.1",
  "defusedxml>=0.7",
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "structlog>=23.0",
]

[project.optional-dependencies]
apk = ["androguard>=4.0"]
frida = ["frida-tools>=12.0"]
ml = ["scikit-learn>=1.3", "numpy>=1.24", "joblib>=1.3"]
yara = ["yara-python>=4.3"]
threat-intel = ["vt-py>=0.18", "OTXv2>=1.5"]
network = ["scapy>=2.5"]

# Exploitation framework dependencies (Linux-only, install manually)
# Note: UV's dependency resolver doesn't properly respect platform markers for these
# exploitation-core = ["bleak>=0.21.0; sys_platform == 'linux'", "impacket>=0.11.0"]
# exploitation-bluetooth = ["lockknife[exploitation-core]", "pybluez>=0.23; sys_platform == 'linux'"]
# exploitation = ["lockknife[exploitation-core,exploitation-bluetooth]; sys_platform == 'linux'"]
full = ["lockknife[apk,frida,ml,yara,threat-intel,network]"]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "pytest-cov>=5.0",
    "bandit>=1.7",
    "pip-audit>=2.7",
    "ty>=0.0.29",
    "ruff>=0.15.9",
    "maturin>=1.9.4",
    "hypothesis>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]

[tool.coverage.run]
branch = true
source = ["lockknife", "lockknife_headless_cli"]
omit = [
  "lockknife/__main__.py",
  "lockknife_headless_cli/interactive.py",
]

[tool.coverage.report]
skip_covered = true
show_missing = true
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
]

[tool.ty]

[tool.ty.src]
include = ["lockknife", "lockknife_headless_cli"]

[tool.ty.analysis]
respect-type-ignore-comments = true
allowed-unresolved-imports = [
  "OTXv2",
  "androguard",
  "androguard.core.bytecodes.apk",
  "bleak",
  "bluetooth",
  "frida",
  "joblib",
  "numpy",
  "scapy",
  "sklearn",
  "sklearn.ensemble",
  "sklearn.neighbors",
  "vt",
  "weasyprint",
  "xhtml2pdf",
  "yara",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
  "SIM", # flake8-simplify
]
ignore = [
  "E501", # large existing corpus of long literals/messages
  "B008", # existing API defaults use call expressions in places
  "F841", # existing CLI/progress code keeps intentionally assigned values
  "E402", # several modules intentionally stage imports around runtime setup
  "SIM103", # style-only simplification across many existing helpers
  "SIM105", # style-only conversion to contextlib.suppress
  "SIM117", # style-only nested-with flattening
  "SIM102", # style-only nested-if flattening
  "SIM118", # style-only dict membership rewrite
  "SIM108", # style-only ternary rewrites
  "C401", # style-only comprehension rewrite
  "UP042", # defer StrEnum migration for compatibility/readability reasons
  "F401", # existing package/module exports rely on imported names
  "SIM115", # style-only context-manager rewrites
  "SIM116", # style-only dict-dispatch rewrites
  "F601", # historical duplicate-key fixtures remain tolerated for now
  "B905", # strict zip migration deferred across older call sites
]

[tool.ruff.lint.isort]
known-first-party = ["lockknife", "lockknife_headless_cli"]

[project.scripts]
lockknife = "lockknife_headless_cli.main:cli"

[tool.maturin]
manifest-path = "lockknife-core/Cargo.toml"
module-name = "lockknife.lockknife_core"
python-source = "."
python-packages = ["lockknife", "lockknife_headless_cli"]
include = [
  { path = "lockknife_headless_cli/**/*.py", format = ["sdist", "wheel"] },
]

[dependency-groups]
dev = [
    "ruff>=0.15.9",
    "ty>=0.0.29",
]
