[package]
name = "lockknife-core"
version = "1.0.0"
edition = "2021"
description = "Native Rust extension and analysis engine for LockKnife"
license = "GPL-3.0-only"
repository = "https://github.com/ImKKingshuk/LockKnife"
homepage = "https://github.com/ImKKingshuk/LockKnife"
documentation = "https://lockknife.vercel.app"

[lib]
name = "lockknife_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
lockknife-tui = { path = "../lockknife-tui" }
pyo3 = { version = "0.24", features = ["abi3", "abi3-py312"] }
ring = "0.17.14"
rayon = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
md-5 = "0.10.6"
rusqlite = { version = "0.39", features = ["bundled"] }
goblin = "0.9"
nom = "8.0"
regex = "1.12"
aho-corasick = "1.1.4"
yara-x = "1.14"
socket2 = "0.6.1"
crc32fast = "1.5"
