[package]
name = "lockknife-tui"
version = "1.0.0"
edition = "2021"
description = "Terminal UI crate for LockKnife"
license = "GPL-3.0-only"
repository = "https://github.com/ImKKingshuk/LockKnife"
homepage = "https://github.com/ImKKingshuk/LockKnife"
documentation = "https://lockknife.vercel.app"

[lib]
name = "lockknife_tui"

[dependencies]
pyo3 = { version = "0.24", features = ["abi3", "abi3-py312"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ratatui = { version = "0.30", features = ["crossterm"] }
crossterm = "0.29"
toml = "0.8"
arboard = "3.6.1"
signal-hook = "0.3.18"
